@@ -38,9 +38,10 @@
 	</array>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>127</integer>
 		<integer>265</integer>
 		<integer>7</integer>
+		<integer>207</integer>
+		<integer>127</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>8L127</string>
