@@ -113,7 +113,6 @@ enum {
     // orientation, top or bottom
     int                         _tabLocation;
     
-    NSLock                      *_lock;
 }
 
 // control characteristics
