@@ -1,3 +1,9 @@
+2006-11-06	fabian
+
+	* Fixed "Add Profile" dialog.
+	* Fixed "New" button position in the bookmarks window.
+	* Removed now unnecessary lock for display updating.
+	
 2006-11-03	fabian
 
 	* Changed VT100Screen code so that the resize caused by escape sequences is processed in the main thread.
